# cnc-tooling-knowledge

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start_server.sh
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md
scripts/: import_vendor_data.py  init_git.sh  init_knowledge_base.py  scrape_vendor_data.py  test_chat.py  test_query.py
src/application/commands/: ingest_cutter.py
src/application/dto/: cutter_dto.py
src/application/handlers/: cutter_handler.py
src/application/queries/: search_cutters.py
src/domain/models/: cutter.py
src/domain/repositories/: cutter_repo.py
src/infrastructure/persistence/: chroma_repo.py  embeddings.py
src/interface/api/: api.py
tests/: conftest.py
tests/unit/domain/: test_models.py
webui/: index.html
